kubernetes/infra/traefik/ip-whitelist-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.10.0/24
      - 192.168.5.0/24
      - 10.0.10.0/24
