kubernetes/infra/traefik/ingress-route.yml
---
apiVersion: traefik.io/v1alpha
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik-k3s.lan.juusoleinonen.fi`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-certificate
